fix: calculating kb_amu in thermo_base module and passing it to other modules (e.g. ideal_gas)

--- a/src/rhyme_cfl/tests/CMakeLists.txt
+++ b/src/rhyme_cfl/tests/CMakeLists.txt
@@ -2,7 +2,10 @@ project( rhyme_cfl_tests )
 set( test_subject rhyme_cfl )
 
 set( factories
+  rhyme_physics
+  rhyme_thermo_base
   rhyme_samr
+  rhyme_log
 )
 
 set( test_deps
