--- a/src/rhyme_logger/src/rhyme_plotter/tests/CMakeLists.txt
+++ b/src/rhyme_logger/src/rhyme_plotter/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
-project ( rhyme_logger_util_tests )
-set( test_subject rhyme_logger_util )
+project ( rhyme_plotter_tests )
+set( test_subject rhyme_plotter )
 
 set( factories )
 set( test_deps )
