[WIP] plotter - Added histogram 1d and hist draw_on procedure

--- a/src/rhyme_logger/src/rhyme_plotter/CMakeLists.txt
+++ b/src/rhyme_logger/src/rhyme_plotter/CMakeLists.txt
@@ -14,6 +14,8 @@ set( deps )
 set( internal_deps )
 
 set( srcs
+  src/rhyme_plotter_histogram_draw_on.f90
+  src/rhyme_plotter_histogram.f90
   src/rhyme_plotter_canvas_plot.f90
   src/rhyme_plotter_canvas_add_axis.f90
   src/rhyme_plotter_canvas_init.f90
