--- a/parameters_2d.conf.example
+++ b/parameters_2d.conf.example
@@ -1,63 +1,130 @@
+# **Parameters Tree**
+#
 # **Initial Condition**
-# - ic_type:
-# - implemented types: simple, snapshot
-# -                    simple: A simple uniform grid, initialized to zero
-# -                    snapshot: Loading a snapshot
+# └── ic_types
+#     ├── simple: uniform grid initialised to zero
+#     │   ├── ic_grid ( 128 128 )
+#     │   │   Grid dimensionality for the first level
+#     │   ├── ic_box_lengths ( 1d0 1d0 'kpc' )
+#     │   │   Physical box lengths with their unit
+#     │   └── ic_nlevels ( 3 )
+#     │       Maximum level of refinement ( currently each level is refined by a factor of 2 in resolution )
+#     └── snapshot: loading a given snapshot
+#         ├── ic_box_lengths ( 1d0 1d0 'kpc' )
+#         │   Physical box lengths with their unit
+#         ├── ic_nlevels ( 3 )
+#         │   Maximum level of refinement ( currently each level is refined by a factor of 2 in resolution )
+#         ├── ic_snapshot_type
+#         │   ├── rhyme
+#         │   └── radamesh
+#         └── ic_snapshot_path
+#
+# **Runtime Options**
+# └── max_nboxes ( 1 10 100 )
+#     Maxumum number of boxes for each level
+#
+# **Internal Units**
+# NB: Be careful, wrong choice of these units might lead to non-physical results
+# ├── density_unit ( 'kg / m^3 ')
+# ├── length_unit ( 'm' )
+# └── time_unit ( 's' )
+#
+# **Boundary Condition**
+# Implemented types: reflective, periodic, outflow
+# ├── left_bc
+# ├── rigth_bc
+# ├── bottom_bc
+# └── top_bc
+#
+# **Thermodynamics**
+# └── ideal_gas_type
+#     Implemented types: monatomic, diatomic, polyatomic
+#
+# **CFL**
+# └── courant_number ( 2d-1 )
+#
+# **Iterative Riemann Solver**
+# ├── pressure_floor ( 1d-10 )
+# ├── tolerance ( 1d-6 )
+# └── n_iteration ( 100 )
+#
+# **Slope Limiter**
+# ├── slope_limiter
+# │   Implemented types: van_leer, minmod, van_albada, superbee
+# └── slope_limiter_omega ( 0d0 )
+#     ω ∈ [-1, 1]
+#
+# **MUSCL-Hancock solver**
+# └── solver_type
+#     Implemented types: memory_intensive, cpu_intensive
+#
+# **Drawing**
+# NB: All units are in pixels
+# NB: Positional units in smoothed_slab_2d and perturb are cell-centred
+# ├── canvas
+# │   ├── transparent
+# │   └── uniform ( uniform  .125d0 0.d0 0.d0 .1d0 )
+# │       Format: uniform rho u v p
+# ├── shape
+# │   ├── cuboid ( cuboid  1 1  56 128 )
+# │   │   Format: cuboid ledge_x ledge_y len_x len_y
+# │   │   └── shape_filling
+# │   │       └── uniform ( uniform  1.d0 0.d0 0.d0 1.d0 )
+# │   ├── sphere ( sphere  3d0 4d0 2.34d0 )
+# │   │   Format: sphere origin_x origin_y radius
+# │   │   └── shape_filling
+# │   │       └── uniform ( uniform  1.d0 0.d0 0.d0 1.d0 )
+# │   ├── prism ( prism  56 1  56 128  72 1 )
+# │   │   Format: prism v1_x v1_y v2_x v2_y v3_x v3_y
+# │   │   └── shape_filling
+# │   │       └── uniform ( uniform  1.d0 0.d0 0.d0 1.d0 )
+# │   └── smoothed_slab_2d ( smoothed_slab_2d  x  56 72  2d-1 4d-1 )
+# │       Format: smoothed_slab_2d  direction  left_pixel right_pixel  left_sigma right_sigma
+# │       └── shape_filling
+# │           └── uniform ( uniform  1.d0 0.d0 0.d0 1.d0 )
+# └── perturb
+#     ├── harmonic ( harmonic cartesian x 0.05 32 0.d0 0.d0 0.d0 1.d0 )
+#     │   Format: harmonic coordinate_type direction A lambda rho u v p
+#     └── symmetric_decaying ( symmetric_decaying cartesian y 1.d0 72 8 0.d0 0.d0 0.d0 1.d0 )
+#         Format: symmetric_decaying coordinate_type direction A pixel sigma rho u v p
+#
+# **Chombo Output**
+# ├── prefix ( './prefix' )
+# └── nickname ( 'hydro-simulation' )
+#
+# **Sources**
+# Not yet implemented
+# ├── source_coordinate ( 12d-1 34d-1 )
+# ├── source_opening_angle ( 4 pi )
+# └── source_spectral_region
+#     ├── power_law ( power_law 1d0 2d0 6.78d9 10 -1.7 )
+#     │   Format: power_law start_freq end_freq total_energy resolution slope
+#     ├── linear ( linear 2.d0 3.d0 5.67d8 15 -1 )
+#     │   Format: linear start_freq end_freq total_energy resolution slope
+#     └── line
+#         ├── gaussian ( line gaussian 3.d0 4.56d7d8 10 )
+#         │   Format: line guassian freq total_energy resolution
+#         └── voigt ( line voigt 3.d0 4.56d7d8 10 )
+#             Format: line voigt freq total_energy resolution
+
+
+#Example
 
 ic_type = simple
 
-# NB: For each kind of IC, you should chose specific IC options as it's
-#     explained below
-# Relevant options for simple IC:
-# - ic_grid: base_grid for the first level
-#            using 1 to reduce dimensionality, e.g. 128 1 1 for 1D simulation
-# - ic_nlevels: number of maximum levels ( refinement cannot exceed this limit )
-#   each level will be refined by a factor of two
-#   the minimum number of levels is 1
-# - example:
-#   ic_grid = 128 128
-#   ic_nlevels = 3
-#
-# Relevant options for snapshot IC:
-# - ic_snapshot_type:
-#   implemented types: rhyme
-# - ic_snapshot_path: path to the snapshot
-#
-# - example:
-#   ic_snapshot_type = rhyme
-#   ic_snapshot_path = /path/to/rhyme/chombo/snapshot
 
 ic_grid = 128 128
 ic_box_lengths = 1 1 "kpc"
 ic_nlevels = 3
 
 
-# **Runtime options**
-# Options:
-# - max_nboxes: Maximum number of boxes for each level
-# NB: In current implementation, the number of boxes cannot exceed these limits
-#     for each level
-
 max_nboxes = 1 10 100
 
 
-# **Units**
-# NB: These units will be used as internal/code units meaning different
-#     components of the code will be converted accordingly, e.g. kB
-#     Be careful, since the wrong choice of these units might lead to non-physical
-#     results
 density_unit = "kg / m^3"
 length_unit = "m"
 time_unit = "s"
 
-
-# **Boundary Conditions**
-# Implemented types:
-# - reflective, periodic, outflow
-#
-# You can set the boundary conditions of different sides separately by using
-# all or a subset of following options:
-# - left_bc, right_bc, bottom_bc, top_bc
 
 left_bc = reflective
 right_bc = outflow
@@ -65,53 +132,23 @@ bottom_bc = periodic
 top_bc = reflective
 
 
-# **Ideal Gas**
-# Implemented types:
-# - monatomic, diatomic, polyatomic
-
 ideal_gas_type = diatomic
 
 
-# **CFL**
+courant_number = .2d0
 
-courant_number = .81d0
-
-
-# **Iterative Riemann Solver**
 
 pressure_floor = 1.d-10
 tolerance = 1.d-6
 n_iteration = 100
 
 
-# **Slope Limiter**
-# Implemented slope limiters:
-# - van_leer, minmod, van_albada, superbee
-
 slope_limiter = van_leer
 slope_limiter_omega = 0.d0
 
 
-# **MUSCL-Hancock solver**
-# Implemented solvers:
-# - memory_intensive, cpu_intensive
-
 solver_type = cpu_intensive
 
-
-# **Drawing**
-# NB: All units are in pixels
-# NB: Positional units in smoothed_slab_2d and perturb are cell-centered
-#     for [ nx, ny ], { 0.5, 1.5, ..., nx-0.5 } are cell centers in x-dir
-#
-# Implemented canvases:
-# - uniform, transparent
-# Implemented shapes:
-# - cuboid, sphere, prism, slab_2d
-# Implemented fillings:
-# - uniform
-# Implemented perturbations:
-# - harmonic, symmetric_decaying
 
 canvas = uniform .125d0 0.d0 0.d0 .1d0
 
@@ -132,19 +169,5 @@ perturb = symmetric_decaying cartesian y 1.d0 56 2 0.d0 0.d0 0.d0 1.d0
 perturb = symmetric_decaying cartesian y 1.d0 72 8 0.d0 0.d0 0.d0 1.d0
 
 
-# **Chombo Output**
-# You can use **prefix** option to drop output snapshot into a directory
-# **nickname** option use at the beginning of output filename following iteration number
-
 prefix = './prefix'
 nickname = 'hydro-simulation'
-
-
-# **Sources**
-# [PLACEHOLDER] Not yet implemented
-
-source_coordinate = 0.12d0 0.34d0 0.56d0
-opening_angle = 4 pi
-spectral_region = power_law 1.d0 2.d0 6.78d9 10 -1.7
-spectral_region = linear 2.d0 3.d0 5.67d8 15
-spectral_region = line 3.d0 3.01d0 4.56d7d8
