[WIP] spectrum - wip: unit_chain - unit_chain division

--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -23,14 +23,17 @@ set( srcs
 
   src/nombre_unit/rhyme_nombre_unit_print.f90
   src/nombre_unit/rhyme_nombre_unit_update_symbol.f90
+  src/nombre_unit/rhyme_nombre_unit_pow.f90
   src/nombre_unit/rhyme_nombre_unit_mul.f90
   src/nombre_unit/rhyme_nombre_unit_clone.f90
   src/nombre_unit/rhyme_nombre_unit_equality.f90
   src/nombre_unit/rhyme_nombre_unit.f90
 
+  src/nombre_unit_chain/rhyme_nombre_unit_chain_div.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_mul.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_tail.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_clone.f90
+  src/nombre_unit_chain/rhyme_nombre_unit_chain_get_dim.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_new.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain.f90
 
