[WIP] spectrum - wip: unit_parse Added find_derived_unit to nombre_parse Added unit_chain pow functions

--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -31,7 +31,9 @@ set( srcs
   src/nombre_unit/rhyme_nombre_unit_tail.f90
   src/nombre_unit/rhyme_nombre_unit.f90
 
+  src/nombre_unit_chain/rhyme_nombre_unit_chain_print.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_div.f90
+  src/nombre_unit_chain/rhyme_nombre_unit_chain_pow.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_mul.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_head.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain_tail.f90
@@ -42,6 +44,7 @@ set( srcs
   src/nombre_unit_chain/rhyme_nombre_unit_chain_new.f90
   src/nombre_unit_chain/rhyme_nombre_unit_chain.f90
 
+  src/nombre_parse/rhyme_nombre_parse_find_derived_unit.f90
   src/nombre_parse/rhyme_nombre_parse_find_unit.f90
   src/nombre_parse/rhyme_nombre_parse_close_par_loc.f90
   src/nombre_parse/rhyme_nombre_parse_tokenize.f90
