[WIP] spectrum - wip: derived_unit_chain Added derived_unit_chain_div refactored: nombre factories working on: chain_div & parsing

--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -46,6 +46,7 @@ set( srcs
   src/nombre_derived_unit/rhyme_nombre_derived_unit.f90
 
 
+  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_div.f90
   src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_mul.f90
   src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_clone.f90
   src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_tail.f90
