[WIP] spectrum - wip: refactoring nombre module Still asking myself why? Renamed derived_unit_chain to unit modified nombre modules to be compatible with new definition of unit next: running nombre tests

--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -56,24 +56,25 @@ set( srcs
   src/nombre_derived_unit/rhyme_nombre_derived_unit.f90
 
 
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_parse.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_pow.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_div.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_mul.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_print.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_clone.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_tail.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain_head.f90
-  src/nombre_derived_unit_chain/rhyme_nombre_derived_unit_chain.f90
+  src/nombre_unit/rhyme_nombre_unit_conversion_factor.f90
+  src/nombre_unit/rhyme_nombre_unit_parse.f90
+  src/nombre_unit/rhyme_nombre_unit_pow.f90
+  src/nombre_unit/rhyme_nombre_unit_div.f90
+  src/nombre_unit/rhyme_nombre_unit_mul.f90
+  src/nombre_unit/rhyme_nombre_unit_print.f90
+  src/nombre_unit/rhyme_nombre_unit_clone.f90
+  src/nombre_unit/rhyme_nombre_unit_tail.f90
+  src/nombre_unit/rhyme_nombre_unit_head.f90
+  src/nombre_unit/rhyme_nombre_unit.f90
 
 
-#   src/rhyme_nombre_get_value.f90
-#   src/rhyme_nombre_print.f90
-#   src/rhyme_nombre_div.f90
-#   src/rhyme_nombre_mul.f90
+  src/rhyme_nombre_get_value.f90
+  src/rhyme_nombre_print.f90
+  src/rhyme_nombre_div.f90
+  src/rhyme_nombre_mul.f90
 #   src/rhyme_nombre_to.f90
-#   src/rhyme_nombre_new.f90
-#   src/rhyme_nombre.f90
+  src/rhyme_nombre_new.f90
+  src/rhyme_nombre.f90
 )
 
 set( rhyme_src_dir .. )
