[WIP] spectrum - done: refactoring nombre module Do hammok driven development next time This package need a serious refactoring (there\'s a hint at the beginning of nombre_unit module I spent too much time on this module already and it\'s needed more work, Saaaaaaadddddd...

--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -72,7 +72,7 @@ set( srcs
   src/rhyme_nombre_print.f90
   src/rhyme_nombre_div.f90
   src/rhyme_nombre_mul.f90
-#   src/rhyme_nombre_to.f90
+  src/rhyme_nombre_to.f90
   src/rhyme_nombre_new.f90
   src/rhyme_nombre.f90
 )
