--- a/src/rhyme_chemistry/tests/CMakeLists.txt
+++ b/src/rhyme_chemistry/tests/CMakeLists.txt
@@ -10,6 +10,10 @@ set( test_deps
   rhyme_assertion
 )
 
+set( assertions
+  rhyme_nombre
+)
+
 set( rhyme_src_dir ../../ )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/tests/CMakeLists.txt )
 
