--- a/src/rhyme_physics/tests/CMakeLists.txt
+++ b/src/rhyme_physics/tests/CMakeLists.txt
@@ -9,6 +9,10 @@ set( test_deps
   rhyme_assertion
 )
 
+set( assertions
+  rhyme_nombre
+)
+
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
 
