--- a/parameters_1d.conf.example
+++ b/parameters_1d.conf.example
@@ -50,8 +50,8 @@ canvas = uniform .125d0 0.d0 .1d0
 shape = cuboid 1 56
 shape_filling = uniform 1.d0 0.d0 1.d0
 
-shape = sphere 3.d0 2.34d0
-shape_filling = uniform 1.d0 0.d0 1.d0
+shape = sphere 3.d0 2.34d0 2.34d-1 'unit'
+shape_filling = uniform absolute 1.d0 0.d0 1.d0
 
 perturb = harmonic cartesian x 0.05 32 0.d0 0.d0 1.d0
 
