--- a/CMakeGlobal/CMakeLists.txt
+++ b/CMakeGlobal/CMakeLists.txt
@@ -2,7 +2,7 @@
 if ( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "Intel" )
   add_compile_options( -warn all -fpp -O3 )
 elseif( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU" )
-  add_compile_options( -Wall -Wextra -cpp -O3 )
+  add_compile_options( -Wall -Wextra -cpp ) # -O3 )
 endif()
 
 # Set Fortran compiler flags
