--- a/src/rhyme_muscl_hancock/src/rhyme_mh_workspace/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/src/rhyme_mh_workspace/CMakeLists.txt
@@ -3,10 +3,10 @@ enable_language( Fortran )
 
 project( rhyme_mh_workspace )
 
-if( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "Intel" )
-  set( CMAKE_Fortran_FLAGS "-stand f08" )
+if ( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "Intel" )
+  set( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -stand f08" )
 elseif( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU" )
-  set( CMAKE_Fortran_FLAGS "-std=f2008" )
+  set( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
 endif()
 
 set( deps
