--- a/src/rhyme_chombo/CMakeLists.txt
+++ b/src/rhyme_chombo/CMakeLists.txt
@@ -29,7 +29,7 @@ set( srcs
 )
 
 set( rhyme_src_dir .. )
-include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake )
 
 # Configs
-include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../config.cmake )
