--- a/src/rhyme_initial_condition/tests/CMakeLists.txt
+++ b/src/rhyme_initial_condition/tests/CMakeLists.txt
@@ -18,7 +18,7 @@ configure_file(
 )
 
 set( rhyme_src_dir ../.. )
-include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake )
 
 # Configs
-include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../config.cmake )
