--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -80,4 +80,4 @@ set( srcs
 )
 
 set( rhyme_src_dir .. )
-include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake )
