--- a/src/rhyme_logger/src/rhyme_plotter/tests/CMakeLists.txt
+++ b/src/rhyme_logger/src/rhyme_plotter/tests/CMakeLists.txt
@@ -5,4 +5,4 @@ set( factories )
 set( test_deps )
 
 set( rhyme_src_dir ../../../.. )
-include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../CMakeGlobal/tests/CMakeLists.txt )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake )
