--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,3 +15,6 @@ compile_and_test:
     - mkdir -p build
     - cd build
     - cmake .. && make && ctest --timeout 120 --output-on-failure
+  only:
+    refs:
+      - master
