--- a/parameters_1d.conf.example
+++ b/parameters_1d.conf.example
@@ -31,6 +31,7 @@ courant_number = .2d0
 
 # **Exact Riemann Solver**
 pressure_floor = 2.2250738585072014E-308
+density_floor = 2.2250738585072014E-308
 tolerance = 1d-6
 n_iteration = 100
 
