--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ before_script:
   - export CC=`which gcc`
   - export CXX=`which g++`
   - export FC=`which gfortran`
+  - ulimit -s unlimited
 
 compile_and_test:
   script:
