--- a/src/rhyme_logger/src/rhyme_plotter/CMakeLists.txt
+++ b/src/rhyme_logger/src/rhyme_plotter/CMakeLists.txt
@@ -14,6 +14,7 @@ set(deps)
 set(internal_deps rhyme_color)
 
 set(srcs
+    src/rhyme_plotter_canvas_draw_histogram.f90
     src/rhyme_plotter_histogram_draw_on.f90
     src/rhyme_plotter_histogram.f90
     src/rhyme_plotter_canvas_clear.f90
