wip: canvas_draw -- Add colorbar next: fix colorbar values

--- a/src/rhyme_logger/src/rhyme_plotter/CMakeLists.txt
+++ b/src/rhyme_logger/src/rhyme_plotter/CMakeLists.txt
@@ -19,6 +19,7 @@ set(srcs
     src/rhyme_plotter_canvas_draw_2d_histogram.f90
     src/rhyme_plotter_canvas_draw_histogram.f90
     src/rhyme_plotter_canvas_plot.f90
+    src/rhyme_plotter_canvas_add_colorbar.f90
     src/rhyme_plotter_canvas_add_corner.f90
     src/rhyme_plotter_canvas_add_axis.f90
     src/rhyme_plotter_canvas_clear.f90
