wip: rt drawing -- Loaded species from param file into chemistry module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ endif()
 set(deps
     rhyme_logger
     rhyme_nombre
+    rhyme_chemistry
     rhyme_physics
     rhyme_hydro_base
     rhyme_thermo_base
