--- a/src/rhyme_ionisation_equilibrium/CMakeLists.txt
+++ b/src/rhyme_ionisation_equilibrium/CMakeLists.txt
@@ -19,9 +19,7 @@ set(srcs
     src/rhyme_ionisation_equilibrium.f90)
 
 set(rhyme_src_dir ..)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt)
+include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake)
 
 # Configs
-include(
-  ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt
-)
+include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../config.cmake)
