--- a/src/rhyme_ionisation_equilibrium/tests/CMakeLists.txt
+++ b/src/rhyme_ionisation_equilibrium/tests/CMakeLists.txt
@@ -6,9 +6,7 @@ set(factories rhyme_logger)
 set(test_deps rhyme_assertion)
 
 set(rhyme_src_dir ../..)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt)
+include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
 
 # Configs
-include(
-  ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt
-)
+include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../config.cmake)
