wip: rt drawing -- reading ionization equilibrium parameters from param file

--- a/parameters_2d.conf.example
+++ b/parameters_2d.conf.example
@@ -23,11 +23,6 @@ bottom_bc = periodic
 top_bc = reflective
 
 
-# **Chemistry**
-elements = H He
-species = HII HeII HeIII
-
-
 # **Thermodynamics**
 ideal_gas_type = diatomic
 
@@ -50,6 +45,21 @@ slope_limiter_omega = 0d0
 
 # **MUSCL-Hancock solver**
 solver_type = cpu_intensive
+
+
+# **Chemistry**
+elements = H He
+species = HII HeII HeIII
+
+
+# **Ionization Equilibrium**
+uvb_equilibrium = disable
+collisional_ionization_equilibrium = enable
+photoionization_equilibrium = disable
+species_cases = case_b case_b case_b
+equilibrium_table_size = 1024 1024
+equilibrium_table_temp_range = 1d2 1d7 'K'
+equilibrium_table_density_range =  1d-3 1d6 'm_H / cm^3'
 
 
 # **Drawing**
