--- a/parameters_3d.conf.example
+++ b/parameters_3d.conf.example
@@ -25,11 +25,6 @@ back_bc = outflow
 front_bc = periodic
 
 
-# **Chemistry**
-elements = H He
-species = HII HeII HeIII
-
-
 # **Thermodynamics**
 ideal_gas_type = diatomic
 
@@ -52,6 +47,21 @@ slope_limiter_omega = 0d0
 
 # **MUSCL-Hancock solver**
 solver_type = cpu_intensive
+
+
+# **Chemistry**
+elements = H He
+species = HII HeII HeIII
+
+
+# **Ionization Equilibrium**
+uvb_equilibrium = disable
+collisional_ionization = enable
+photoionization_equilibrium = disable
+species_cases = case_a case_b case_a
+equilibrium_table_size = 1024 1024
+equilibrium_table_temp_range = 1d2 1d7 'K'
+equilibrium_table_density_range =  1d-3 1d6 'm_H / cm^3'
 
 
 # **Drawing**
