--- a/src/rhyme_ionisation_equilibrium/tests/CMakeLists.txt
+++ b/src/rhyme_ionisation_equilibrium/tests/CMakeLists.txt
@@ -1,9 +1,11 @@
 project(rhyme_ionisation_equilibrium_tests)
 set(test_subject rhyme_ionisation_equilibrium)
 
-set(factories rhyme_chemistry rhyme_logger)
+set(factories rhyme_physics rhyme_chemistry rhyme_logger)
 
 set(test_deps rhyme_assertion)
+
+set(assertions rhyme_nombre)
 
 set(rhyme_src_dir ../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
